# Sensory-Feedback-Control

./: .gitignore  LICENSE  README.md  actuation_muscles.py  plotting_muscles.py  pyproject.toml  requirements.txt  run_simulation.py  sensoryfeedback.py  set_arm_environment.py  set_environment.py  tools.py
Data/: initial_data.npy  test.npy
Videos/: trash.mov
examples/BendFormation/: plotting_muscles.py  run_simulation.py  set_arm_environment.py  set_environment.py
examples/BendPropagation/: plotting_muscles.py  run_simulation.py  set_arm_environment.py
examples/Data/: bend_form.npy
examples/Videos/: trash.mov
sensory_feedback_control/: __init__.py  actuation_muscles.py  sensoryfeedback.py  utils.py
sensory_feedback_control/__pycache__/: actuation_muscles.ContinuousActuation.muscle_stretch-173.py39.1.nbc  actuation_muscles.ContinuousActuation.muscle_stretch-173.py39.nbi  actuation_muscles._internal_to_external_load-62.py39.1.nbc  actuation_muscles._internal_to_external_load-62.py39.nbi  actuation_muscles._lab_to_material-58.py39.1.nbc  actuation_muscles._lab_to_material-58.py39.nbi  actuation_muscles._material_to_lab-46.py39.1.nbc  actuation_muscles._material_to_lab-46.py39.nbi  actuation_muscles._passive_force-20.py39.1.nbc  actuation_muscles._passive_force-20.py39.nbi  actuation_muscles._row_sum-38.py39.1.nbc  actuation_muscles._row_sum-38.py39.nbi  actuation_muscles.longitudinal_muscle_function-106.py39.1.nbc  actuation_muscles.longitudinal_muscle_function-106.py39.nbi  utils._aver-123.py39.1.nbc  utils._aver-123.py39.2.nbc  utils._aver-123.py39.nbi  (+9 more)
