[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "Sensory-Feedback-Control"
version = "0.0.1"
description = "A package for applying sensory feedback control law for computational octopus arm model simulated in PyElastica."
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = {text = "MIT"}
authors = [
    {name = "Tixian Wang"}
]
keywords = ["Soft Robotics", "PyElastica", "Octopus", "Cosserat Rod", "Feedback Control"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    "numpy~1.22.0",
    "scipy>=1.11.0",
    "numba~0.55.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "PyElastica=0.3.0",
    "h5py>=3.0.0",
    "click>=8.1.7",
]
